[EVOBeast] Reorganized Imgs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" text="text/css" href="./style.css" />
   </head>
   <body>
-    <div class="floor"></div>
-    <canvas id="canvas"></canvas>
+    <header></header>
+    <main>
+      <div class="floor"></div>
+      <canvas id="canvas"></canvas>
+    </main>
+    <footer>
+      <a href="https://github.com/yoel0/Project-One-EVOBeast" target="”_blank”"
+        ><img class="icon" src="./images/github-logo.png"
+      /></a>
+      <a
+        href="https://www.linkedin.com/in/yoel-morad-892b641b2/"
+        target="”_blank”"
+        ><img class="icon" src="./images/linkedin-logo.png"
+      /></a>
+      <a href="mailto:yoelgabriel.m@gmail.com" target="”_blank”"
+        ><img class="icon" src="./images/mail-logo.png"
+      /></a>
+      <span id="copyright"> Created by Yoel Morad &copy; 2020</span>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
