[EVOBeast] Add Sounds File

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         target="”_blank”"
         ><img class="icon" src="./images/linkedin-logo.png"
       /></a>
-      <a href="mailto:yoelgabriel.m@gmail.com" target="”_blank”"
+      <a href="mailto:#" target="”_blank”"
         ><img class="icon" src="./images/mail-logo.png"
       /></a>
       <span id="copyright"> Created by Yoel Morad &copy; 2020</span>
