[EVOBeast] Fix Wireframe Structure

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" text="text/css" href="./style.css" />
   </head>
   <body>
-    <header>
-      <div class="game-title">
-        <h2 class="rotate">EVO</h2>
-        <h2>bEAST</h2>
-      </div>
-    </header>
     <main>
       <div class="floor"></div>
       <canvas id="canvas"></canvas>
     </main>
     <section>
-      <div class="start-game">
-        <button type="button" id="startButton">Start EVOBeast</button>
-      </div>
-      <div class="how-to-play">
-        <button type="button" id="infoButton">How To Play</button>
+      <div class="start-screen">
+        <div class="game-title">
+          <h2 class="rotate">EVO</h2>
+          <h2>bEAST</h2>
+        </div>
+        <div class="start-game">
+          <button type="button" id="startButton">Start EVOBeast</button>
+        </div>
+        <div class="how-to-play">
+          <button type="button" id="infoButton">How To Play</button>
+        </div>
       </div>
       <div class="info-screen">
         <div class="info-content">
