[EVOBeast] Add HTML/CSS Restructure

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- <section>
       <div class="start-screen">
         <div class="game-title">
-          <h2 class="rotate">EVO</h2>
-          <h2>bEAST</h2>
+          <h4 class="rotate">EVO</h4>
+          <h4>bEAST</h4>
         </div>
         <div class="start-game">
           <button type="button" id="startButton">Start EVOBeast</button>
@@ -74,8 +74,7 @@
         ><img class="icon" src="./images/mail-logo.png"
       /></a>
       <span id="copyright"> Created by Yoel Morad &copy; 2020</span>
-    </footer>
-  -->
+    </footer> -->
     <script src="./script.js"></script>
   </body>
 </html>
