--- a/index.html
+++ b/index.html
@@ -12,55 +12,60 @@
   </head>
   <body>
     <div id="container">
-      <aside id="top-left"><h2>EVObEAST</h2></aside>
-      <aside id="top-right"><h2 id="movement"></h2></aside>
       <main>
         <canvas id="game"><!-- play it, a game --></canvas>
+        <div class="start-screen">
+          <div class="game-title">
+            <h4 class="rotate">EVO</h4>
+            <h4>bEAST</h4>
+          </div>
+          <div class="start-game">
+            <button type="button" id="startButton">Start EVOBeast</button>
+          </div>
+          <div class="how-to-play">
+            <button type="button" id="infoButton">How to Play</button>
+          </div>
+        </div>
+        <div class="info-screen">
+          <div class="info-content">
+            <h3>How to Play</h3>
+            <p>
+              Use the w, a, s, d, keys to move EVO Beast around and devour
+              rabbits as you race to reach Evolution before the Hunter devours
+              you!<br />
+              Once you reach Evolution D E V O U R the Hunter.
+            </p>
+            <br />
+            <img src="./images/wabbit.gif" width="50" height="50" />
+            <button type="button" id="info-close">Close</button>
+          </div>
+        </div>
+        <div class="won-screen">
+          <div class="won-content">
+            <h3>You WON!</h3>
+            <p>You consumed the Hunter, you voracious BEAST.</p>
+            <div class="menu">
+              <button type="button" id="menu">Back to Main Menu</button>
+            </div>
+            <div class="reset">
+              <button type="button" id="resetButton">Devour Again?</button>
+            </div>
+          </div>
+        </div>
+        <div class="gameover-screen">
+          <div class="gameover-content">
+            <h3>GAME OVER</h3>
+            <p>Here in the Ruins, dark and deep I offer you eternal sleep.</p>
+            <div class="menu">
+              <button type="button" id="menu2">Back to Main Menu</button>
+            </div>
+            <div class="reset">
+              <button type="button" id="resetButton2">Devour Again?</button>
+            </div>
+          </div>
+        </div>
       </main>
-      <aside id="btm-left"><h2>100</h2></aside>
-      <aside id="btm-right"><h2 id="status">play the game</h2></aside>
     </div>
-    <!-- <section>
-      <div class="start-screen">
-        <div class="game-title">
-          <h4 class="rotate">EVO</h4>
-          <h4>bEAST</h4>
-        </div>
-        <div class="start-game">
-          <button type="button" id="startButton">Start EVOBeast</button>
-        </div>
-        <div class="how-to-play">
-          <button type="button" id="infoButton">How To Play</button>
-        </div>
-      </div>
-      <div class="info-screen">
-        <div class="info-content">
-          <h3>How To Play</h3>
-          <p>
-            Use the w, a, s, d, keys to move EVO Beast around and devour rabbits
-            as you race to reach Evolution before the Hunter devours you! Once
-            you reach Evolution D E V O U R the Hunter.
-          </p>
-          <br />
-          <img src="./images/wabbit.gif" width="50" height="50" />
-          <button type="button" id="info-close">Close</button>
-        </div>
-      </div>
-      <div class="won-screen">
-        <div class="won-content">
-          <h3>You WON!</h3>
-          <p>You consumed the Hunter, you voracious BEAST.</p>
-          <button type="button" id="reset-game-button">Devour Again?</button>
-        </div>
-      </div>
-      <div class="gameover-screen">
-        <div class="gameover-content">
-          <h3>GAME OVER</h3>
-          <p>Here in the Ruins, dark and deep I offer you eternal sleep.</p>
-          <button type="button" id="gameover-button">Devour Again?</button>
-        </div>
-      </div>
-    </section>
     <footer>
       <a href="https://github.com/yoel0/Project-One-EVOBeast" target="_blank"
         ><img class="icon" src="./images/github-logo.png"
@@ -73,8 +78,12 @@
       <a href="mailto:#" target="_blank"
         ><img class="icon" src="./images/mail-logo.png"
       /></a>
-      <span id="copyright"> Created by Yoel Morad &copy; 2020</span>
-    </footer> -->
+      <span id="copyright">
+        Created by Yoel Morad &copy; 2020, feel free to contribute, open source
+        && FREE,<br />
+        I also can't afford a lawyer.</span
+      >
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
