--- a/index.html
+++ b/index.html
@@ -67,22 +67,24 @@
       </main>
     </div>
     <footer>
-      <a href="https://github.com/yoel0/Project-One-EVOBeast" target="_blank"
-        ><img class="icon" src="./images/github-logo.png"
-      /></a>
-      <a
-        href="https://www.linkedin.com/in/yoel-morad-892b641b2/"
-        target="_blank"
-        ><img class="icon" src="./images/linkedin-logo.png"
-      /></a>
-      <a href="mailto:#" target="_blank"
-        ><img class="icon" src="./images/mail-logo.png"
-      /></a>
-      <span id="copyright">
+      <div class="yeet">
+        <a href="https://github.com/yoel0/Project-One-EVOBeast" target="_blank"
+          ><img class="icon" src="./images/github-logo.png"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/yoel-morad-892b641b2/"
+          target="_blank"
+          ><img class="icon" src="./images/linkedin-logo.png"
+        /></a>
+        <a href="mailto:#" target="_blank"
+          ><img class="icon" src="./images/mail-logo.png"
+        /></a>
+      </div>
+      <div id="copyright">
         Created by Yoel Morad &copy; 2020, feel free to contribute, open source
         && FREE,<br />
-        I also can't afford a lawyer.</span
-      >
+        I also can't afford a lawyer.
+      </div>
     </footer>
     <script src="./script.js"></script>
   </body>
