[EVOBeast] Add Background Music

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="info-content">
             <h3>How to Play</h3>
             <p>
-              Use the w, a, s, d, keys to move EVO Beast around and devour
+              Use the w, a, s, d keys to move EVO Beast around and devour
               rabbits as you race to reach Evolution before the Hunter devours
               you!<br />
               Once you reach Evolution D E V O U R the Hunter.
@@ -86,6 +86,7 @@
         I also can't afford a lawyer.
       </div>
     </footer>
+    <audio id="bgm" src="./sounds/Underwater.mp3"></audio>
     <script src="./script.js"></script>
   </body>
 </html>
