[EVOBeast] Add HTML Fix

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       </div>
       <div id="copyright">
         Created by Yoel Morad &copy; 2020, feel free to contribute, open source
-        && FREE,<br />
-        I also can't afford a lawyer.
+        && FREE.
       </div>
     </footer>
     <audio id="bgm" src="./sounds/Underwater.mp3"></audio>
